# CoEnv

./: .gitignore  README.md  index.html
.github/workflows/: deploy.yml
doku/diary/01-opencv-learn/: README.md
doku/diary/02_opencv_learn/: README.md  index.md
doku/diary/03_learning_opencv/: README.md  index.md  smol.webm
doku/diary/04_fixing_bugs/: README.md
doku/diary/05_CornerDetect/: README.md
ethics/: coenv.html  images.tex  index.html
marketing/: index.html
marketing/_app/: start-3fc12a1c.js  start-a0306a5f.js
scanner/: CMakeLists.txt  CMakeLists_bak.txt  Makefile  README.md  compile_commands.json  display_webcam.cpp  main  meson.build  raspicam.pc  read_image.cpp  scanner.cpp  shape-detect.cpp
scanner/cmake-modules/: Findraspicam.cmake
scanner/design/: CoEnv_Scanner_Design.blend  CoEnv_Scanner_Design.blend1
scanner/include/: helpers.c  helpers.h  webcam.c  webcam.h
scanner/modules/: filter.cpp  filter.hpp  helpers.cpp  helpers.hpp  webcam.cpp  webcam.hpp
scanner/scanner-new/: CMakeLists.txt  Makefile
scanner/scanner-new/cmake-modules/: Findraspicam.cmake
scanner/scanner-new/include/: helpers.c  helpers.h  webcam.c  webcam.h
scanner/scanner-new/src/: main.cpp
scanner/src/: gpio_test.cpp  lcd_test.cpp  main-old.cpp  main.cpp  rfid.cpp  rfid_test.cpp  rfidled_test.cpp
symbol/: index.html
symbol-creator/: package.json  pnpm-lock.yaml  svelte.config.js
symbol-creator/src/lib/helpers/: index.ts  rotate2D.ts
symbol-creator/src/routes/: index.svelte
symbol/app/: error.svelte-f710764d.js  layout.svelte-db5acefc.js  start-06fb8d91.js  start-2c09ddd6.js  start-61505b45.js  start-705c27dc.js  start-93007462.js
symbol/app/chunks/: vendor-72bece01.js
symbol/app/pages/: index.svelte-236fef91.js  index.svelte-44cc1751.js  index.svelte-5db281ff.js  index.svelte-90ec7aba.js
(+4 files in other folders)
